# dualneuron

./: .env.example  .gitignore  README.md  pyproject.toml
dualneuron/dream/: axis.py  sim.py
dualneuron/screening/: run.py  sets.py  utils.py  visualize.py
dualneuron/synthesis/: ascend.py  generate.py  ops.py  visualize.py
dualneuron/synthesis/priors/: natural_gray.npy  natural_rgb.npy
dualneuron/twins/: activations.py  nets.py
dualneuron/twins/V1GrayTaskDriven/: correlations.npy  mask.npy
dualneuron/twins/V4ColorTaskDriven/: correlations.npy  mask.npy
dualneuron/twins/V4GrayTaskDriven/: correlations.npy
tests/: AblateNeuron.ipynb  Deis.ipynb  DreamSim.ipynb  Screen.ipynb  Semantics.ipynb  SparseNeuron.ipynb
