[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dualneuron"
version = "0.0.1"
description = ""
readme = "README.md"
authors = [{ name = "Nikos Karantzas" }]
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
	"nnvision @ git+https://github.com/KonstantinWilleke/nnvision.git@interview",
	"datasets",
	"opencv-python",
	"python-dotenv",
	"dreamsim"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dualneuron*"]
